v22.4.1
- Fix pointless "Unknown property" log spam introduced with v22.4.0

v22.4.0
- PVR Add-on API v9.1.0
- Add support for Autorec property "Broadcast type" (HTSPv39+)
- Add support for DVR entry property "DVR configuration" (HTSPv40+)
- Add support for DVR entry property "Comment" (HTSPv42+)
- Make timers created by autorec and timerec editable

v22.3.0
- Add support for PVR Providers (HTSPv38+)

v22.2.0
- Add support for TVH Parental Rating fields
- Misc cleanup and smaller fixes

v22.1.0
- PVR Add-on API v9.0.0

v22.0.0
- Initial release for Piers (PVR Add-on API v8.4.0)

v21.2.4
-  Async updates: Ignore 'add' events for existing tags (happens on wake after suspend).

v21.2.3
- Predictive tuning: Fix crash while sorting channels.

v21.2.2
- Translations updates from Weblate
	- af_za, am_et, ar_sa, ast_es, az_az, be_by, bg_bg, bs_ba, ca_es, cs_cz, cy_gb, da_dk, de_de, el_gr, en_au, en_nz, en_us, eo, es_ar, es_es, es_mx, et_ee, eu_es, fa_af, fa_ir, fi_fi, fo_fo, fr_ca, fr_fr, gl_es, he_il, hi_in, hr_hr, hu_hu, hy_am, id_id, is_is, it_it, ja_jp, ko_kr, lt_lt, lv_lv, mi, mk_mk, ml_in, mn_mn, ms_my, mt_mt, my_mm, nb_no, nl_nl, pl_pl, pt_br, pt_pt, ro_ro, ru_ru, si_lk, sk_sk, sl_si, sq_al, sr_rs, sr_rs@latin, sv_se, szl, ta_in, te_in, tg_tj, th_th, tr_tr, uk_ua, uz_uz, vi_vn, zh_cn, zh_tw

v21.2.1
- Predictive tuning: Fix crash when starting playback of a channel which has no unique channel number
  (tvh does not prevent duplicate channel numbers).

v21.2.0
- Add setting for threshold for reconnect on stalled streams

v21.1.2
- Fix TV channels stuttering after wake from suspend - take 2

v21.1.1
- Fix TV channels stuttering after wake from suspend

v21.1.0
- Kodi inputstream API update to version 3.3.0

v21.0.1
- Fixed cases where existing channels were treated by Kodi as deleted from backend.
  (Info in Kodi log: "Removed stale channel foo from group bar")

v21.0.0
- Initial version for Kodi v21 Omega

v20.6.1
- Translations updates from Weblate